add setting of docker compose and script.